--- a/gwas-3.rmd
+++ b/gwas-3.rmd
@@ -1,8 +1,10 @@
 ---
 title: 'GWAS tutorial: Snp testing'
-author: Patrick Breheny and Anna Reisetter
+author: Patrick Breheny and Logan Harris
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 ---
+
+Note: Currently undergoing updates
 
 ```{r knitr_setup, include=FALSE, purl=FALSE}
 library(knitr)
@@ -14,6 +16,7 @@ knitr::knit_hooks$set(small.mar = function(before, options, envir) {
   if (before) par(mar = c(4, 4, .1, .1))
 })
 ```
+
 ```{r setup, include=FALSE}
 library(data.table)
 library(magrittr)
@@ -24,14 +27,13 @@ library(dplyr)
 
 # Forenote
 
-As the rest of the pages, this is a work in progress. Additionally, further work needs to be done before properly proceeding with this step.  Luckily, that part of the pipeline is being built, and the structure of this section will remain largly unchanged. With that said, discussion of the results will need to be updated. If you find that the code outputs do not align with a discussion of the results, this is likely the case, but know change is on the way!
-
 # Adjusted
 
 ## Read in data
 ```{r read}
 clinical <- fread("data/GWAStutorial_clinical.csv")
-obj <- readRDS('data/gwas-qc.rds')
+obj <- readRDS('data/gwas-imp.rds')
+obj_pre <- readRDS('data/gwas-qc.rds')
 (bim <- fread('data/GWAStutorial.bim'))
 obj$genotypes
 dim(obj$map)
@@ -41,15 +43,44 @@ dim(obj$map)
 
 An important consideration is controlling for stratification in the population alongside other population level factors. A key assumption is that our subjects are independent from one another, but this may not necessarily be the case. Since this page is being built concurrently with the analysis on population structure, we will set that aside for the moment.
 
-```{r association_test}
+```{r association_test, message = FALSE, warning = FALSE}
 assoc_test <- snp.rhs.tests(
   clinical$CAD ~ clinical$sex + clinical$age, 
   family   = "binomial",
   data     = obj$fam,
-  snp.data = obj$genotypes
-)
+  snp.data = obj$genotypes,
+  rules = rules
+  )
 
 assoc_p_vals <- p.value(assoc_test)
+
+## Pre imputation
+assoc_test_pre <- snp.rhs.tests(
+  clinical$CAD ~ clinical$sex + clinical$age, 
+  family   = "binomial",
+  data     = obj_pre$fam,
+  snp.data = obj_pre$genotypes
+  )
+
+assoc_p_vals_pre <- p.value(assoc_test_pre)
+
+## Table to be used with FUMA/MAGMA
+snp_fuma <- data.frame(
+  SNP = assoc_test@snp.names,
+  P = p.value(assoc_test),
+  N = assoc_test@N
+  ) %>%
+  dplyr::left_join(bim[,c(1:2, 4)], by = c("SNP" = "V2")) %>%
+  dplyr::rename(CHR = V1, POS = V4) %>%
+  dplyr::select(SNP, CHR, POS, P, N)
+
+write.table(
+  snp_fuma,
+  file = "data/snp_fuma.txt",
+  row.names = FALSE,
+  col.names = TRUE,
+  quote = FALSE
+)
 ```
 
 In  our above model, you'll notice that we use the independent variables sex and to help consider differences due to sex/age since we have them as covariates.
@@ -57,7 +88,7 @@ In  our above model, you'll notice that we use the independent variables sex and
 ### qqplot
 
 ```{r assumption_test}
-qq(assoc_p_vals)
+qq(assoc_p_vals_pre)
 ```
 
 Not too bad, this looks pretty promising. There is a bit of divergence up which is what we'd like to see. What this tells us is that most the p-values follow how we'd expect with a small number being lower than expected. However, with testing we hope this is the case since this signifies significance.
@@ -65,6 +96,8 @@ Not too bad, this looks pretty promising. There is a bit of divergence up which 
 ### Manhattan Plot
 
 #### Data Wrangling and Default Plot
+
+- need to compare to pre imputation
 
 ```{r manhattan_plot}
 manh_data <- data.frame(
@@ -77,7 +110,21 @@ manh_data <- data.frame(
     BP = V4
   )
 
-manhattan(manh_data, ylim = c(0, 10))
+manh_data_pre <- data.frame(
+    SNP = assoc_test_pre@snp.names, 
+    P = assoc_p_vals_pre
+  ) %>%
+  left_join(bim, by = c("SNP" = "V2")) %>%
+  rename(
+    CHR = V1, 
+    BP = V4
+  )
+
+manhattan(manh_data, ylim = c(0, 40))
+manhattan(manh_data_pre, ylim = c(0, 20))
+
+manh_data %>% filter(P < .00000005)
+manh_data_pre %>% filter(P < .00000005)
 ```
 
 #### Adding annotations
@@ -131,6 +178,15 @@ assoc_test_unc <- snp.rhs.tests(
 )
 
 assoc_p_vals_unc <- p.value(assoc_test_unc)
+
+## List of SNPs for analysis later
+write.table(
+  manh_data %>% filter(P <= .0005) %>% pull(SNP),
+  file = "data/snp_list.txt",
+  row.names = FALSE,
+  col.names = FALSE,
+  quote = FALSE
+)
 ```
 
 It drops some data and throws a warning, but let's see how the plots compare.
@@ -141,10 +197,9 @@ It drops some data and throws a warning, but let's see how the plots compare.
 qq(assoc_p_vals_unc)
 ```
 
-Looks pretty similar to with the cleaned data, probably because this dataset was already relativaly clean.
+Looks pretty similar to with the cleaned data, probably because this dataset was already relatively clean.
 
 ### Manhattan Plot
-
 
 ```{r mahnattan_plot}
 manh_data_unc <- data.frame(
